--- a/index.html
+++ b/index.html
@@ -1,28 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+
+    body {
+      background-color: hsl(212, 45%, 89%)
+    }
+
+    .container {
+      background-color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border: gray 1px solid;
+      margin: auto;
+      padding: 12px;
+      margin: 70px auto;
+      width: 35%;
+    }
+
+    img {
+      width: 250px;
+      margin: auto;
+      border-radius: 8px;  
+    }
+
+    h3, p {
+      text-align: center;
+    }
+
+    h3 {
+      color: hsl(218, 44%, 22%);
+    }
+
+    p {
+      color: hsl(220, 15%, 55%);
+      font-size: 15px;
+    }
   </style>
 </head>
+
 <body>
 
-  Improve your front-end skills by building projects
+  <div class="container">
+    <img src="/images/image-qr-code.png" alt="">
+    <h3>
+      Improve your front-end skills by building projects
+    </h3>
+    <p>
+      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+    </p>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
   </div>
 </body>
+
 </html>
