--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&family=Short+Stack&display=swap"
+    rel="stylesheet">
 
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
+    * {
+      font-family: "Outfit", sans-serif;
+      font-size: 15px;
     }
 
     body {
@@ -26,35 +25,41 @@
     }
 
     .container {
+      padding-top: 10px;
+      padding-bottom: 20px;
       background-color: white;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      border: gray 1px solid;
-      margin: auto;
       padding: 12px;
-      margin: 70px auto;
-      width: 35%;
+      margin: 100px auto;
+      width: 250px;
+      height: 320px;
+      border-radius: 8px;
     }
 
-    img {
-      width: 250px;
-      margin: auto;
+    .container img {
+      width: 180px;
+      height: 180px;
       border-radius: 8px;  
     }
 
-    h3, p {
+    h2, p {
       text-align: center;
+      padding-left: 8px;
+      padding-right: 8px;
     }
 
-    h3 {
+    .container h2 {
+      font-weight: 700;
+      font-size: 15px;
       color: hsl(218, 44%, 22%);
     }
 
-    p {
+    .container p {
       color: hsl(220, 15%, 55%);
-      font-size: 15px;
+      font-size: 14px;
+      font-weight: 400;
     }
   </style>
 </head>
@@ -63,17 +68,13 @@
 
   <div class="container">
     <img src="/images/image-qr-code.png" alt="">
-    <h3>
+    <h2>
       Improve your front-end skills by building projects
-    </h3>
+    </h2>
     <p>
       Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
     </p>
 
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div>
   </div>
 </body>
 
